syntax = "proto3";

package cache;

service RouterService {
  rpc LookupOwner(LookupOwnerRequest) returns (LookupOwnerResponse);
}

service CacheService {
  rpc ReadRange(ReadRangeRequest) returns (stream ReadRangeResponse);
}

message LookupOwnerRequest {
  string key = 1;
  uint64 offset = 2;
}

message LookupOwnerResponse {
  string addr = 1;
}

message ReadRangeRequest {
  string key = 1;
  uint64 offset = 2;
  uint64 length = 3;
  optional string version = 4;  // omit for immutable objects to skip version check
}

message ReadRangeResponse {
  bytes data = 1;
}
